2024-02-11  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_other_scripts): whoops, undo
	mktexlsr.pl, it's overwriting the sh version. Something
	to look at later.

2024-02-08  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_other_scripts): add texlive/mktexlsr.pl,
	since it is used by fmtutil.pl.
	https://github.com/TeX-Live/texlive-source/pull/63#issuecomment-1932342880

2023-02-28  Karl Berry  <karl@freefriends.org>

	* Makefile.am (install-data-hook) [WIN32]: don't install
	mtxrun.dll, since ConTeXt isn't handled here any more.

2022-09-11  Reinhard Kotucha  <reinhard.kotucha@web.de>

	* Makefile.am : rename rungs.tlu to rungs.lua

2021-11-22  Karl Berry  <karl@freefriends.org>

	* Makefile.am (texmf_shell_scripts): missed \.

2021-11-20  Karl Berry  <karl@freefriends.org>

	* Makefile.am (texmf_shell_scripts): add xe(la)tex-unsafe.sh.

2020-01-23  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_shell_scripts): allcm.sh and allneeded.sh
	in the new texlive-extra/ belong here instead of texmf_other_scripts,
	since there is no Windows wrapper for them.

2019-12-29  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_other_scripts): add mktexlsr mktexmf
	mktexpk mktextfm, now maintained under Master.
	(bin_links): add mktexlsr:texhash.

2016-04-10  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_other_scripts): remove m-tx and pmx2pdf.

2015-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (texmf_other_scripts): Add fmtutil-sys.sh and
	updmap-sys.sh (maintained under Master).

2015-04-12  Norbert Preining  <norbert@preining.info>

	* Makefile.am (texmf_other_scripts): add fmtutil

2014-11-17  Karl Berry  <karl@tug.org>

	* Makefile.am: Use WIN_WRAPPER (w32_wrapper or w64_wrapper).

2014-07-18  Karl Berry  <karl@tug.org>

	* Makefile.am (bin_links): mkluatexfontdb gone.

2014-05-19  Karl Berry  <karl@tug.org>

	* Makefile.am (texmf_context_scripts): add contextjit, mtxrunjit.
	Remove ctxtools and pstopdf, which are not to be user-level